--- a/main.html
+++ b/main.html
@@ -27,8 +27,8 @@
     <div class="myself">
         <div class="topic">
             <h1 >M HUZAIFA</h1>
-            <h3>A Frontend Web Developer from Pakistan,
-            Currently diving into HTML, CSS, and JavaScript for the past 2 months.</h3>
+            <h3>A <span class="color-span">FrontEnd Web Developer</span> from Pakistan,
+            Currently diving into <span id="text"></span> from the past 2 months.</h3>
             
             <h4>Passionate about crafting visually stunning and user-friendly websites,
             Im honing my skills to transform creative ideas into interactive web experiences.
@@ -80,7 +80,7 @@
        </div>
   </div>
 
-    hello world
+  <script src="main.js"></script>
 </div>
 </body>
 </html>
